--- a/src/app/components/grid/grid.component.scss
+++ b/src/app/components/grid/grid.component.scss
@@ -1,6 +1,6 @@
 .grid{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+
 }
