--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-grid></app-grid>
+<div class="clr-row container clr-no-gutters">
+  <div class="clr-col-3">
+    <app-navbar></app-navbar>
+  </div>
+  <div class="clr-9">
+    <app-grid></app-grid>
+  </div>
+</div>
