--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div class="clr-row container clr-no-gutters">
-  <div class="clr-col-3">
+<div class="row main-container gx-0">
+  <div class="col-3">
     <app-navbar></app-navbar>
   </div>
-  <div class="clr-9">
+  <div class="col-9">
     <app-grid></app-grid>
   </div>
 </div>
