--- a/src/app/components/grid/grid.component.scss
+++ b/src/app/components/grid/grid.component.scss
@@ -1,3 +1,11 @@
 .grid {
   cursor: pointer;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding:0;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
