resize canvas bug

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="col-3">
     <app-navbar></app-navbar>
   </div>
-  <div class="col-9">
+  <div class="col-9 grid-container">
     <app-grid></app-grid>
   </div>
 </div>
