--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,9 @@
-.main-container{
-  margin:0;
+.main-container {
+  margin: 0;
   padding: 0;
   height: 100vh;
   width: 100vw;
+}
+.grid-container {
+  overflow: auto;
 }
