--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -21,5 +21,14 @@
     >
       Find path
     </button>
+    <br/>
+    <button
+      mat-raised-button
+      color="secondary"
+      (click)="clearObstacles()"
+      class="w-100"
+    >
+      Clear obstacles
+    </button>
   </div>
 </div>
