--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -21,7 +21,7 @@
     >
       Find path
     </button>
-    <br/>
+    <br />
     <button
       mat-raised-button
       color="secondary"
@@ -29,6 +29,15 @@
       class="w-100"
     >
       Clear obstacles
+    </button>
+
+    <button
+      mat-raised-button
+      color="secondary"
+      (click)="clearPath()"
+      class="w-100"
+    >
+      Clear path
     </button>
   </div>
 </div>
